--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.4",
     "framer-motion": "^8.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.6.2",
+    "react-router-dom": "^6.7.0",
     "react-switch": "^7.0.0",
     "styled-components": "^5.3.6"
   },
